syntax = "proto3";

import "common/v1/jobs.proto";

package d2.comms.v1;

option csharp_namespace = "D2.Services.Protos.Comms.V1";

// **********************************
// **** CommsJobService gRPC API ****
// **********************************

service CommsJobService {
  // Hard-delete soft-deleted messages past the retention period (default 90 days).
  rpc PurgeDeletedMessages(d2.common.v1.TriggerJobRequest)
      returns (d2.common.v1.TriggerJobResponse);

  // Delete old delivery requests and attempts past the retention period (default 1 year).
  rpc PurgeDeliveryHistory(d2.common.v1.TriggerJobRequest)
      returns (d2.common.v1.TriggerJobResponse);
}
